fix(frontend): hover effect was not showing on rectangles

--- a/AutoCut.Frontend/Components/Visualization/CurrentVisualization.razor.css
+++ b/AutoCut.Frontend/Components/Visualization/CurrentVisualization.razor.css
@@ -7,7 +7,7 @@
     overflow-y: scroll;
 }
 
-:deep rect:hover {
+::deep rect:hover {
     cursor: pointer;
     fill-opacity: .2;
 }
